--- a/nomad/README
+++ b/nomad/README
@@ -1,4 +1,4 @@
-robomagellan ROS package
+nomad ROS package
 
 A diagram describing the ROS nodes:
 https://cacoo.com/diagrams/XSM34UVvYIzbXs1b
@@ -7,22 +7,26 @@ https://cacoo.com/diagrams/kHPU6kID4jruOZMA
 
 SETUP/PREREQUISITES
 
-Install ROS Groovy
+Install Phidgets library and Python modules
+	Phidgets.py has a syntax error.
+	Change "sys.platform == 'linux'" to "sys.platform == 'linux2'"
+
+Install ROS Hydro
   you have two options: install desktop-full, or install comm (bare bones) page and then install:
-    ros-groovy-rospack
-    ros-groovy-navigation
-    ros-groovy-geometry
-    ros-groovy-robot-model
-    ros-groovy-rostopic
-    ros-groovy-xacro
-    ros-groovy-stage
-    ros-groovy-cv-bridge
+    ros-hydro-rospack
+    ros-hydro-navigation
+    ros-hydro-geometry
+    ros-hydro-robot-model
+    ros-hydro-rostopic
+    ros-hydro-xacro
+    ros-hydro-stage
+    ros-hydro-cv-bridge
 Install opencv and opencv python bindings
 Install python-pyproj (GPS nodes requires it)
   sudo apt-get install python-pyproj
 Install differential_drive package from source
   http://www.ros.org/wiki/differential_drive
-make sure the current directory (robomagellan) is on your ROS_PACKAGE_PATH
+make sure the current directory (nomad) is on your ROS_PACKAGE_PATH
 chmod +x nodes/*.py
 
 TO RUN (SIMULATION)
